testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment13.errors.txt
module.js(8,23): error TS2339: Property 'j' does not exist on type '{ m(): void; i: number; }'.
module.js(10,23): error TS2339: Property 'k' does not exist on type '{ m(): void; i: number; }'.


==== module.js (2 errors) ====
    var Outer = {}
    Outer.Inner = function() {}
    Outer.Inner.prototype = {
        m() { },
        i: 1
    }
    // incremental assignments still work
    Outer.Inner.prototype.j = 2
                          ~
!!! error TS2339: Property 'j' does not exist on type '{ m(): void; i: number; }'.
    /** @type {string} */
    Outer.Inner.prototype.k;
                          ~
!!! error TS2339: Property 'k' does not exist on type '{ m(): void; i: number; }'.
    var inner = new Outer.Inner()
    inner.m()
    inner.i
    inner.j
    inner.k
    